...
      ),
    );
  }

  TextFormField _buildUsernameField() {
    return TextFormField(
      key: const Key('register_01_username_textfield'),
      controller: _usernameController,
      decoration: const InputDecoration(
        labelText: 'ชื่อผู้ใช้',
        prefixIcon: Icon(Icons.person_outline),
        border: OutlineInputBorder(),
        helperText: 'ใช้ตัวอักษรหรือเลขผสม ความยาวไม่เกิน 10 ตัว',
      ),
      maxLength: 10,
      onChanged: (value) {
        _cubit.onUsernameChanged(value);
      },
      validator: (value) {
        if (value == null || value.isEmpty) return 'Required';
        if (!RegExp(r'^[a-zA-Z0-9]+$').hasMatch(value)) {
          return 'Please enter a valid username';
        }
        return null;
      },
    );
  }

  TextFormField _buildPasswordField() {
    return TextFormField(
      key: const Key('register_02_password_textfield'),
      controller: _passwordController,
      decoration: const InputDecoration(
        labelText: 'รหัสผ่าน',
        prefixIcon: Icon(Icons.lock_outline),
        border: OutlineInputBorder(),
        helperText: 'ต้องมีตัวเลขอย่างน้อย 1 ตัว และสามารถใช้สัญลักษณ์พิเศษได้',
...
        _cubit.onPasswordChanged(value);
      },
      validator: (value) {
        if (value == null || value.isEmpty) return 'Required';
        const pattern = r'^(?=.*[0-9])[a-zA-Z0-9@#\$%\^&\+=!\*\-_]+$';
        if (!RegExp(pattern).hasMatch(value)) {
          return 'Please enter a valid password';
        }
        return null;
      },
    );
  }

  TextFormField _buildConfirmPasswordField() {
    return TextFormField(
      key: const Key('register_03_confirm_password_textfield'),
      decoration: const InputDecoration(
        labelText: 'ยืนยันรหัสผ่าน',
        prefixIcon: Icon(Icons.lock_reset_outlined),
        border: OutlineInputBorder(),
        helperText: 'กรอกรหัสผ่านอีกครั้งเพื่อยืนยัน',
      ),
...
      onChanged: (value) {
        _cubit.onConfirmPasswordChanged(value);
      },
      validator: (value) {
        if (value == null || value.isEmpty) return 'Required';
        if (value != _cubit.state.password) {
          return 'รหัสผ่านไม่ตรงกัน';
        }
        return null;
      },
    );
  }

  TextFormField _buildEmailField() {
    return TextFormField(
      key: const Key('register_04_email_textfield'),
      decoration: const InputDecoration(
        labelText: 'อีเมล',
        prefixIcon: Icon(Icons.mail_outline),
        border: OutlineInputBorder(),
      ),
      maxLength: 25,
...
        _cubit.onEmailChanged(value);
      },
      validator: (value) {
        if (value == null || value.isEmpty) return 'Required';
        const pattern = r'^[a-zA-Z0-9@.-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$';
        if (!RegExp(pattern).hasMatch(value)) {
          return 'Please enter a valid email address';
        }
        return null;
      },
    );
  }

...
            Row(
              children: [
                Row(
                  mainAxisSize: MainAxisSize.min,
                  children: [
                    Radio<int>(
                      key: const Key('register_05_gender_male_radio'),
                      value: 0,
                      groupValue: field.value,
                      onChanged: (value) {
                        if (value != null) {
                          field.didChange(value);
                          _cubit.onGenderSelected(value);
...
                  ],
                ),
                Row(
                  mainAxisSize: MainAxisSize.min,
                  children: [
                    Radio<int>(
                      key: const Key('register_05_gender_female_radio'),
                      value: 1,
                      groupValue: field.value,
                      onChanged: (value) {
                        if (value != null) {
                          field.didChange(value);
                          _cubit.onGenderSelected(value);
...
                  ],
                ),
                Row(
                  mainAxisSize: MainAxisSize.min,
                  children: [
                    Radio<int>(
                      key: const Key('register_05_gender_other_radio'),
                      value: 2,
                      groupValue: field.value,
                      onChanged: (value) {
                        if (value != null) {
                          field.didChange(value);
                          _cubit.onGenderSelected(value);
...
            Row(
              children: [
                Row(
                  mainAxisSize: MainAxisSize.min,
                  children: [
                    Radio<int>(
                      key: const Key('register_06_education_highschool_radio'),
                      value: 0,
                      groupValue: field.value,
                      onChanged: (value) {
                        if (value != null) {
                          field.didChange(value);
                          _cubit.onEducationSelected(value);
...
                  ],
                ),
                Row(
                  mainAxisSize: MainAxisSize.min,
                  children: [
                    Radio<int>(
                      key: const Key('register_06_education_bachelor_radio'),
                      value: 1,
                      groupValue: field.value,
                      onChanged: (value) {
                        if (value != null) {
                          field.didChange(value);
                          _cubit.onEducationSelected(value);
...
      },
    );
  }

  DropdownButtonFormField<String> _buildDropdownField(RegisterState state) {
    return DropdownButtonFormField<String>(
        key: const Key('register_07_age_dropdown'),
        decoration: const InputDecoration(
          labelText: 'อายุ',
          prefixIcon: Icon(Icons.calendar_month),
          border: OutlineInputBorder(),
        ),
        value: state.ageGroup,
        items: const [
          DropdownMenuItem(
            value: '18-25',
            child: Text('18 - 25 ปี', style: TextStyle(fontSize: 20)),
          ),
          DropdownMenuItem(
            value: '26-35',
            child: Text('26 - 35 ปี', style: TextStyle(fontSize: 20)),
          ),
          DropdownMenuItem(
            value: '36-45',
            child: Text('36 - 45 ปี', style: TextStyle(fontSize: 20)),
          ),
          DropdownMenuItem(
            value: '46+',
            child: Text('46 ปีขึ้นไป', style: TextStyle(fontSize: 20)),
          ),
        ],
        onChanged: (value) {
          _cubit.onAgeGroupSelected(value);
        },
        validator: (value) {
...

  Center _buildSubmitButton() {
    return Center(
      child: SizedBox(
        width: double.infinity,
        child: ElevatedButton(
          key: const Key('register_08_submit_endapi_button'),
          onPressed: () async {
            final isValid = _formKey.currentState?.validate() ?? false;
            if (!isValid) return;
            await _cubit.callApi();
          },
          style: ElevatedButton.styleFrom(
...
